style: update style

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ import Achievement from "../components/achievement.astro";
 
     <PageHeading
       title="About Me"
-      description="Hello, my name is Wildan Zhilal Manafi, I am a student from University of Majalengka, Informatics Engineering study program. I am passionate about technology, especially the web and artificial intelligence. I am always enthusiastic about learning new things and exploring new possibilities in the world of technology. With my dedication, I aim to continue to contribute and develop innovative solutions."
+      description="Hello, my name is Wildan Zhilal Manafi, I am a student from University of Majalengka, Informatics Engineering study program. I am passionate about technology, especially the software engineering, cyber security and artificial intelligence. I am always enthusiastic about learning new things and exploring new possibilities in the world of technology. With my dedication, I aim to continue to contribute and develop innovative solutions."
     />
 
 
