--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,6 @@ import Layout from "../layouts/main.astro";
 
   <Separator text="Check out my projects" />
   <Projects />
-  <Separator text="Some of my writing" />
-  <Writings />
+  <!-- <Separator text="Some of my writing" />
+  <Writings /> -->
 </Layout>
