feat: add modal and detail projects

--- a/src/components/home/projects.astro
+++ b/src/components/home/projects.astro
@@ -10,10 +10,6 @@ import Project from "../project.astro";
   >
     Projects
   </h2>
-  <!-- <p class="mb-6 text-base text-neutral-600 dark:text-neutral-400">
-    Here are some of my recent projects. I'm always working on something new, so
-    check back often!
-  </p> -->
   <div
     class="grid items-stretch w-full sm:grid-cols-2 md:grid-cols-3 gap-7 mt-7"
   >
@@ -24,7 +20,10 @@ import Project from "../project.astro";
             name={project.name}
             description={project.description}
             image={project.image}
-            url={project.url}
+            data={project.data}
+            github={project.github}
+            demo={project.demo}
+            tech={project.tech}
           />
         )
       })
