--- a/src/components/project.astro
+++ b/src/components/project.astro
@@ -1,15 +1,14 @@
 ---
-const { name, description, url, image } = Astro.props;
+const { data, name, description, github, demo, image, tech } = Astro.props;
 ---
-
 <div
-  class="relative flex flex-col items-stretch duration-300 ease-out p-7 sm:p-3 group h-100 rounded-2xl"
+class="relative flex flex-col items-stretch duration-300 ease-out p-7 sm:p-3 group h-100 rounded-2xl"
 >
-  <div
-    class="absolute inset-0 z-20 block w-full h-full duration-300 ease-out bg-transparent border group-hover:-translate-x-1 group-hover:-translate-y-1 group-hover:border group-hover:border-neutral-300 dark:group-hover:border-neutral-600 group-hover rounded-2xl group-hover:bg-white dark:group-hover:bg-neutral-950"
-  ></div>
-  <div
-    class="absolute inset-0 z-10 block w-full h-full duration-300 ease-out border rounded-2xl border-neutral-300 dark:border-neutral-600 group-hover:translate-x-1 group-hover:translate-y-1"
+<div
+class="absolute inset-0 z-20 block w-full h-full duration-300 ease-out bg-transparent border-black group-hover:-translate-x-1 group-hover:-translate-y-1 group-hover:border group-hover:border-black dark:group-hover:border-white group-hover rounded-2xl group-hover:bg-white dark:group-hover:bg-neutral-950 dark:border-white"
+></div>
+<div
+    class="absolute inset-0 z-10 block w-full h-full duration-300 ease-out border rounded-2xl border-black dark:border-white group-hover:translate-x-1 group-hover:translate-y-1"
   ></div>
   <div
     class="relative z-30 block duration-300 ease-out group-hover:-translate-x-1 group-hover:-translate-y-1"
@@ -22,42 +21,62 @@ const { name, description, url, image } = Astro.props;
         class="flex items-center mb-0 text-base font-semibold tracking-tight text-neutral-900 dark:text-neutral-100"
       >
         <h3>{name}</h3>
-        <!-- <svg
-          class="group-hover:translate-x-0 group-hover:translate-y-0 -rotate-45 translate-y-1 -translate-x-1 w-2.5 h-2.5 stroke-current ml-1 transition-all ease-in-out duration-200 transform"
-          viewBox="0 0 13 15"
-          version="1.1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          ><g
-            stroke="none"
-            stroke-width="1"
-            fill="none"
-            fill-rule="evenodd"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            ><g
-              id="svg"
-              transform="translate(0.666667, 2.333333)"
-              stroke="currentColor"
-              stroke-width="2.4"
-              ><g
-                ><polyline
-                  class="transition-all duration-200 ease-out opacity-0 delay-0 group-hover:opacity-100"
-                  points="5.33333333 0 10.8333333 5.5 5.33333333 11"
-                ></polyline><line
-                  class="transition-all duration-200 ease-out transform -translate-x-1 opacity-0 group-hover:translate-x-0 group-hover:opacity-100 group-hover:ml-0"
-                  x1="10.8333333"
-                  y1="5.5"
-                  x2="0.833333333"
-                  y2="5.16666667"></line></g
-              ></g
-            ></g
-          ></svg
-        > -->
       </div>
-      <p class="text-sm text-neutral-600 dark:text-neutral-400"
+      <p class="text-sm text-neutral-600 dark:text-neutral-400 line-clamp-2"
         >{description}</p
       >
+      <div class="mt-10 flex justify-end">
+        <button data-modal-target={data} data-modal-toggle={data} class="text-gray-900 hover:text-white border border-gray-800 hover:bg-black focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-white dark:text-white dark:hover:text-black dark:hover:bg-white dark:focus:ring-gray-800">Detail</button>
+      </div>
     </div>
   </div>
+</div>
+
+<!-- Main modal -->
+<div id={data} tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative p-4 w-full max-w-2xl max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow z-40 dark:bg-black">
+            <!-- Modal header -->
+            <div class="flex items-center justify-between p-4 md:p-5 border-black border-b rounded-t dark:border-white">
+                <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+                    {name}
+                </h3>
+                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide={data}>
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                    </svg>
+                    <span class="sr-only">Close modal</span>
+                </button>
+            </div>
+            <!-- Modal body -->
+            <div class="block w-full">
+              <img src={image} class="w-full h-auto rounded-lg aspect-[16/9]" />
+            </div>
+            <div class="p-4 md:p-5 space-y-4">
+                <p class="text-base leading-relaxed text-neutral-600 dark:text-neutral-400">
+                    {description}
+                </p>
+                <p class="text-base leading-relaxed text-neutral-600 dark:text-neutral-400">
+                    <span class="font-bold">Tech Stack: </span>{tech}
+                </p>
+            </div>
+            <!-- Modal footer -->
+            <div class="flex justify-end p-4 md:p-5 border-t border-black rounded-b dark:border-white">
+               <a href={github}>
+                  <button type="button" class="text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-gray-800 me-2 mb-2">
+                  <svg class="w-6 h-6 me-2 text-white dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                  <path fill-rule="evenodd" d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z" clip-rule="evenodd"/>
+                  </svg>Github</button>
+               </a>
+               <a href={demo}>
+                  <button type="button" class="text-black bg-gray-200 hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 me-2 mb-2">
+                  <svg class="w-6 h-6 me-2 text-black dark:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
+                  <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+                  </svg>Demo</button>   
+               </a>
+            </div>
+        </div>
+    </div>
 </div>
