--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -40,6 +40,7 @@ const { title } = Astro.props;
     <Footer />
     <script src="../assets/js/main.js"></script>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
     <Fragment set:html={import.meta.env.FOOTER_INJECT} />
   </body>
 </html>
