--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import Layout from "../layouts/main.astro";
 ---
 
 <Layout title="Wildan | Projects">
-  <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
+  <section class="relative max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
       title="Projects"
       description="Here are some of the current projects I've been working on. I really enjoy creating new projects and coming up with new ideas. I'm always working on something new, so check back often!"
@@ -22,7 +22,10 @@ import Layout from "../layouts/main.astro";
               name={project.name}
               description={project.description}
               image={project.image}
-              url={project.url}
+              data={project.data}
+              github={project.github}
+              demo={project.demo}
+              tech={project.tech}
             />
           )
         })
